crates/tree-sitter-gaviero/grammar.js
/// <reference types="tree-sitter-cli/dsl" />

module.exports = grammar({
  name: "gaviero",

  extras: ($) => [/\s/, $.comment],

  rules: {
    source_file: ($) => repeat($._definition),

    _definition: ($) =>
      choice(
        $.include_declaration,
        $.client_declaration,
        $.agent_declaration,
        $.workflow_declaration,
        $.prompt_declaration,
        $.tier_alias_declaration,
        $.vars_block,
      ),

    // ── Include ──────────────────────────────────────────────────
    // include "path/to/lib.gaviero"
    // Path is resolved relative to the including file's directory by the
    // gaviero-dsl resolver. Cycle detection happens at compile time.
    include_declaration: ($) =>
      seq("include", $._string_value),

    // ── Comments ─────────────────────────────────────────────────
    comment: (_) => token(seq("//", /.*/)),

    // ── Client ───────────────────────────────────────────────────
    client_declaration: ($) =>
      seq("client", $.identifier, "{", repeat($.client_field), "}"),

    client_field: ($) =>
      choice(
        seq("tier", $.tier_value),
        seq("model", $._string_value),
        seq("effort", $._effort_value),
        seq("privacy", $.privacy_value),
        $.extra_block,
        "default",
      ),

    _effort_value: ($) =>
      choice($._string_value, $.identifier, $.tier_value),

    // ── Extra block: `extra { (ident | str) str ... }` ───────────
    extra_block: ($) =>
      seq("extra", "{", repeat($.extra_pair), "}"),

    extra_pair: ($) =>
      seq(choice($.identifier, $._string_value), $._string_value),

    // ── Vars block: `vars { IDENT "value" ... }` ─────────────────
    // Used at top-level and inside agent declarations.
    vars_block: ($) =>
      seq("vars", "{", repeat($.vars_pair), "}"),

    vars_pair: ($) => seq($.identifier, $._string_value),

    // ── Top-level tier alias: `tier <name> <client-ref>` ─────────
    tier_alias_declaration: ($) =>
      seq("tier", $.tier_alias_name, $.identifier),

    tier_alias_name: ($) =>
      choice(
        $.identifier,
        "cheap",
        "expensive",
        "coordinator",
        "reasoning",
        "execution",
        "mechanical",
      ),

    // ── Top-level prompt declaration: `prompt <name> <string>` ───
    prompt_declaration: ($) =>
      seq("prompt", $.identifier, $._string_value),

    // ── Agent ────────────────────────────────────────────────────
    agent_declaration: ($) =>
      seq("agent", $.identifier, "{", repeat($.agent_field), "}"),

    agent_field: ($) =>
      choice(
        seq("description", $._string_value),
        seq("client", $.identifier),
        seq("tier", $.tier_alias_name),
        $.scope_block,
        seq("depends_on", $.identifier_list),
        seq("produces", $.string_list),
        seq("prompt", choice($._string_value, $.identifier)),
        seq("max_retries", $.integer),
        seq("timeout", $.integer),
        $.memory_block,
        $.context_block,
        $.vars_block,
        seq("tools", $.string_list),
        seq("template", $.boolean),
      ),

    // ── Scope block ──────────────────────────────────────────────
    scope_block: ($) =>
      seq("scope", "{", repeat($.scope_field), "}"),

    scope_field: ($) =>
      choice(
        seq("owned", $.string_list),
        seq("read_only", $.string_list),
        seq("impact_scope", $.boolean)
      ),

    // ── Memory block ─────────────────────────────────────────────
    memory_block: ($) =>
      seq("memory", "{", repeat($.memory_field), "}"),

    memory_field: ($) =>
      choice(
        seq("read_ns", $.string_list),
        seq("write_ns", $._string_value),
        seq("importance", $.float),
        seq("staleness_sources", $.string_list),
        seq("read_query", $._string_value),
        seq("read_limit", $.integer),
        seq("write_content", $._string_value)
      ),

    // ── Verify block ─────────────────────────────────────────────
    verify_block: ($) =>
      seq("verify", "{", repeat($.verify_field), "}"),

    verify_field: ($) =>
      choice(
        seq("compile", $.boolean),
        seq("clippy", $.boolean),
        seq("test", $.boolean),
        seq("impact_tests", $.boolean)
      ),

    // ── Context block ────────────────────────────────────────────
    context_block: ($) =>
      seq("context", "{", repeat($.context_field), "}"),

    context_field: ($) =>
      choice(
        seq("callers_of", $.string_list),
        seq("tests_for", $.string_list),
        seq("depth", $.integer)
      ),

    // ── Loop block ───────────────────────────────────────────────
    loop_block: ($) =>
      seq("loop", "{", repeat($.loop_field), "}"),

    loop_field: ($) =>
      choice(
        seq("agents", $.identifier_list),
        // `reviewers` accepts either a literal list (anonymous roster) or
        // a bare identifier that names a workflow `param` declaration.
        seq("reviewers", choice($.reviewer_list, $.identifier)),
        seq("template_init", $.identifier),
        seq("template_refine", $.identifier),
        seq("consensus_mode", $.consensus_mode_value),
        $.until_clause,
        seq("max_iterations", $.integer),
        seq("iter_start", $.integer),
        seq("stability", $.integer),
        seq("judge_timeout", $.integer),
        seq("irreconcilable_after", $.integer),
        seq("strict_judge", $.boolean),
        seq("branch_chain", $.branch_chain_value),
      ),

    reviewer_list: ($) => seq("[", repeat($.reviewer_entry), "]"),

    reviewer_entry: ($) =>
      seq("{", repeat($.reviewer_field), "}"),

    reviewer_field: ($) =>
      choice(
        seq("id", $._string_value),
        seq("model", $._string_value),
        seq("effort", $._effort_value),
      ),

    consensus_mode_value: (_) =>
      choice("strict", "partial_ok", "explore"),

    branch_chain_value: (_) => choice("stacked", "none"),

    // ── Until clause (3 variants) ────────────────────────────────
    until_clause: ($) => seq("until", $._until_condition),

    _until_condition: ($) =>
      choice($.until_verify, $.until_agent, $.until_command),

    until_verify: ($) => seq("{", repeat($.verify_field), "}"),

    until_agent: ($) => seq("agent", $.identifier),

    until_command: ($) => seq("command", $._string_value),

    // ── Workflow ─────────────────────────────────────────────────
    workflow_declaration: ($) =>
      seq("workflow", $.identifier, "{", repeat($.workflow_field), "}"),

    workflow_field: ($) =>
      choice(
        seq("steps", $.step_list),
        seq("max_parallel", $.integer),
        seq("execution_mode", $.execution_mode_value),
        $.memory_block,
        seq("strategy", $.strategy_value),
        seq("test_first", $.boolean),
        seq("max_retries", $.integer),
        seq("attempts", $.integer),
        seq("escalate_after", $.integer),
        $.verify_block,
        $.param_declaration,
      ),

    // `param <name>`                                — bare; kind inferred from usage
    // `param <name> [ <reviewer_entry>* ]`          — roster default
    // `param <name> { <client_field>* }`            — client default (model / effort / privacy / extra)
    // When the default is omitted, the CLI must supply `--param <name>=...`.
    param_declaration: ($) =>
      seq(
        "param",
        $.identifier,
        optional(choice($.reviewer_list, $.param_client_block)),
      ),

    param_client_block: ($) =>
      seq("{", repeat($.client_field), "}"),

    // ── Step list (identifiers + loop blocks) ────────────────────
    step_list: ($) => seq("[", repeat(choice($.loop_block, $.identifier)), "]"),

    // ── Lists ────────────────────────────────────────────────────
    string_list: ($) => seq("[", repeat($._string_value), "]"),

    identifier_list: ($) => seq("[", repeat($.identifier), "]"),

    // ── Values ───────────────────────────────────────────────────
    tier_value: (_) =>
      choice(
        "cheap",
        "expensive",
        "coordinator",
        "reasoning",
        "execution",
        "mechanical"
      ),

    privacy_value: (_) => choice("public", "local_only"),

    strategy_value: ($) => choice("single_pass", "refine", $.identifier),

    execution_mode_value: (_) => choice("repo", "document"),

    boolean: (_) => choice("true", "false"),

    // ── Literals ─────────────────────────────────────────────────
    _string_value: ($) => choice($.string, $.raw_string),

    string: (_) =>
      token(seq('"', repeat(choice(/[^"\\]/, /\\./)), '"')),

    // Raw string: #"..."#
    raw_string: (_) =>
      token(
        seq(
          "#\"",
          repeat(choice(/[^"\n]/, /\n/, seq("\"", /[^#\n]/), seq("\"", /\n/))),
          "\"#"
        )
      ),

    float: (_) => token(/[0-9]+\.[0-9]+/),

    integer: (_) => token(/[0-9]+/),

    identifier: (_) => token(/[a-zA-Z_][a-zA-Z0-9_-]*/),
  },
});
